--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h2>This is a Test</h2>
+    </header>
     <main></main>
     <script src="src/script.js"></script>
   </body>
